deleted debug traces

--- a/notebooks/workier_loading_test.ipynb
+++ b/notebooks/workier_loading_test.ipynb
@@ -48,44 +48,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-01 03:24:38.314 | INFO     | datasets.data_processing:lmdb_dataloaders:293 - loading data... \n",
-      "2023-05-01 03:24:38.316 | INFO     | datasets.data_processing:lmdb_dataloaders:295 - If this process takes long, consider setting is_load_onto_memory=False or use LMDBIterableDataset.\n"
+      "2023-05-01 03:30:21.825 | INFO     | datasets.data_processing:lmdb_dataloaders:293 - loading data... \n",
+      "2023-05-01 03:30:21.826 | INFO     | datasets.data_processing:lmdb_dataloaders:295 - If this process takes long, consider setting is_load_onto_memory=False or use LMDBIterableDataset.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "config_orig['NUM_WORKERS']=1\n"
+      "config_orig['NUM_WORKERS']=10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-01 03:24:41.268 | INFO     | utils.misc:__exit__:207 - elapsed time:  2.728255 seconds. ()\n",
-      "2023-05-01 03:24:41.275 | INFO     | utils.misc:__exit__:208 - Memory usage: 1887.94 megabytes\n"
+      "2023-05-01 03:30:24.839 | INFO     | utils.misc:__exit__:207 - elapsed time:  2.766229 seconds. ()\n",
+      "2023-05-01 03:30:24.844 | INFO     | utils.misc:__exit__:208 - Memory usage: 1887.94 megabytes\n"
      ]
     }
    ],
    "source": [
-    "config_orig['NUM_WORKERS'] = 1\n",
+    "config_orig['NUM_WORKERS'] = 10\n",
     "\n",
-    "torch.set_num_threads(config_orig['NUM_WORKERS'])\n",
+    "torch.set_num_threads(np.max([1, config_orig['NUM_WORKERS']]))\n",
     "\n",
     "print(f\"{config_orig['NUM_WORKERS']=}\")\n",
     "\n",
     "\n",
     "with StopWatch(unit='sec'):\n",
     "    data_loaders = lmdb_dataloaders(config_orig)\n",
-    "\n"
+    "                                                            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max([1, config_orig['NUM_WORKERS']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config_orig['IS_LOAD_ONTO_MEMORY']"
    ]
   },
   {
