--- a/notebooks/Generate_sequential_Gaussian_as_LMDB.ipynb
+++ b/notebooks/Generate_sequential_Gaussian_as_LMDB.ipynb
@@ -32,20 +32,21 @@
     "\n",
     "######## USER MODIFIABLE BLOCKS ########\n",
     "DENSITY_OFFSET = 2.0\n",
-    "BATCH_SIZE = 10000\n",
+    "BATCH_SIZE = 50\n",
     "NUM_ITER = 1\n",
-    "NUM_CLASSES = 3\n",
+    "NUM_CLASSES = 2\n",
+    "FEAT_DIM = 2\n",
     "\n",
     "config = {\n",
-    "    'FEAT_DIM' : 128, # 128, # dimension of multivariate Gaussian\n",
+    "    'FEAT_DIM' : 2, # 128, # dimension of multivariate Gaussian\n",
     "    'DENSITY_OFFSET' : DENSITY_OFFSET, # separation of distributions\n",
     "    'BATCH_SIZE' : BATCH_SIZE, # number of sequence that created at once\n",
     "    'NUM_ITER' : NUM_ITER, # total data number will be batch_size * num_iter * num_classes\n",
     "    'TIME_STEPS' : 50, # 50, # length of time steps\n",
     "    'NUM_CLASSES' : NUM_CLASSES, # class numbers\n",
-    "    'PHASE': 'test',\n",
+    "    'PHASE': 'val',\n",
     "    'IS_SHUFFLE': True,\n",
-    "    'SAVE_DIR': f'/your/path/to/SDRE_data/SequentialGaussian_{NUM_CLASSES}class_offset{DENSITY_OFFSET}_large/'\n",
+    "    'SAVE_DIR': f'/your/path/to/SequentialGaussian_{NUM_CLASSES}class_offset{DENSITY_OFFSET}_dim{FEAT_DIM}/'\n",
     "}\n",
     "######## USER MODIFIABLE BLOCKS END ########\n",
     "\n"
@@ -426,11 +427,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-07 07:35:55.306 | INFO     | __main__:<module>:24 - Starting iter_i=0 / 0\n",
-      "2023-04-07 07:36:14.739 | INFO     | __main__:iid_multivariate_gaussian:291 - shuffling the data...\n",
-      "100% 30000/30000 [00:01<00:00, 28118.67it/s]\n",
-      "2023-04-07 07:36:19.426 | INFO     | __main__:<module>:28 - total data genarated:30000\n",
-      "2023-04-07 07:36:19.427 | SUCCESS  | __main__:<module>:29 - done and dusted!\n"
+      "2023-06-01 09:09:57.894 | INFO     | __main__:<module>:24 - Starting iter_i=0 / 0\n",
+      "2023-06-01 09:09:57.903 | INFO     | __main__:iid_multivariate_gaussian:291 - shuffling the data...\n",
+      "100%|██████████| 100/100 [00:00<00:00, 51787.92it/s]\n",
+      "2023-06-01 09:09:57.914 | INFO     | __main__:<module>:28 - total data genarated:100\n",
+      "2023-06-01 09:09:57.915 | SUCCESS  | __main__:<module>:29 - done and dusted!\n"
      ]
     }
    ],
